Tweaking values in color management panel will cause viewport to re-render #73984

Closed
opened 2020-02-18 19:57:34 +01:00 by anders beyer · 20 comments

System Information
Operating system: Windows 7 / 10
Graphics card: Gtx 1070

Blender Version
Broken: from 2.81 to 28.2 not on 2.79

Short description of error
Tweaking values in color management panel will cause viewport to re-render
The issue is caused when object is selected in texture coordinate node in a standard material setup.
blenderviewportrender.jpg

here is a link to a discussion on blenderartist about this issue.
Link

Exact steps for others to reproduce the error
blenderbugviewport.blend

  • Open file
  • Set Viewport Shading to Rendered
  • Change exposure in color management panel, viewport will re-render image
  • Unlink linked object from texture coordinate node

Change exposure in color management panel

No re-rendering happens

**System Information** Operating system: Windows 7 / 10 Graphics card: Gtx 1070 **Blender Version** Broken: from 2.81 to 28.2 not on 2.79 **Short description of error** Tweaking values in color management panel will cause viewport to re-render The issue is caused when object is selected in texture coordinate node in a standard material setup. ![blenderviewportrender.jpg](https://archive.blender.org/developer/F8348537/blenderviewportrender.jpg) here is a link to a discussion on blenderartist about this issue. [Link ](https://blenderartists.org/t/right-clickling-on-objects-or-changing-the-colormanagement-causes-the-viewport-render-to-start-again/1196047) **Exact steps for others to reproduce the error** [blenderbugviewport.blend](https://archive.blender.org/developer/F8348535/blenderbugviewport.blend) - Open file - Set Viewport Shading to Rendered - Change exposure in color management panel, viewport will re-render image - Unlink linked object from texture coordinate node # Change exposure in color management panel No re-rendering happens
Author

Added subscriber: @andersbeyer

Added subscriber: @andersbeyer

#76753 was marked as duplicate of this issue

#76753 was marked as duplicate of this issue

#75202 was marked as duplicate of this issue

#75202 was marked as duplicate of this issue

#73992 was marked as duplicate of this issue

#73992 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

See my comment on #73992

See my comment on #73992
Member

Added subscriber: @AugustoCezar

Added subscriber: @AugustoCezar
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

What information do you need?

What information do you need?
Member

@AugustoCezar Since your file is too huge, I asked you to repro the bug with file attached here. But by reading the discussion on blenderartists, it seems that both are the same. So, I cannot think of anything now, nor do I need any information.

@AugustoCezar Since your file is too huge, I asked you to repro the bug with file attached here. But by reading the discussion on blenderartists, it seems that both are the same. So, I cannot think of anything now, nor do *I* need any information.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I guess I didn't have to change title, but this report was quite confusing and I thought, that there were multiple bugs

I guess I didn't have to change title, but this report was quite confusing and I thought, that there were multiple bugs
Richard Antalik changed title from selecting a object in the texture coordinate node causes the viewport render to start again from simple actions to Tweaking values in color management panel will cause viewport to re-render 2020-02-21 20:02:41 +01:00
Member

#75202 (viewport rendering lights update when moving camera view but not when moving perpective view (non camera) )
#75204 (Viewport redraws unnecessarily after each selection when using Eevee in look-dev or rendered modes)

#75202 (viewport rendering lights update when moving camera view but not when moving perpective view (non camera) ) #75204 (Viewport redraws unnecessarily after each selection when using Eevee in look-dev or rendered modes)

Added subscriber: @3di

Added subscriber: @3di

Added subscriber: @FrederikSteinmetz

Added subscriber: @FrederikSteinmetz

This issue was referenced by blender/cycles@05ed55c125

This issue was referenced by blender/cycles@05ed55c1253df6c1d25cde14e1d0d07c6bc73296

This issue was referenced by 16d8a683be

This issue was referenced by 16d8a683be4348b5c6eff48cbb16c7454863d9ea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-14 17:41:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73984
No description provided.