Fix T73984: unnecessary Cycles viewport updates with object texture coordinates

Remove old code that added extra updates for shaders that have a dependency on
objects. The dependency graph can now tell Cycles when a material is affected by
an object transform.